# terminal-emulator

./: .clang-format  .gitignore  Dockerfile  LICENSE  README.md
.media/: project.pptx
iksTerm/: .clang-format  Doxyfile  Makefile  README-TERM.md  README.md  iksTerm.1
iksTerm/include/: main.h  term.h  term_pty.h  util.h
iksTerm/src/: main.c  term.c  term_pty.c  util.c
paraShell/: CMakeLists.txt  README.md  install.sh  main.cpp  shell.hpp
shell/: CMakeLists.txt  ShellConfig.h.in  main  main.cpp  shell.hpp
shell/include/: shell.hpp
shell/src/: main.cpp
